RESOLVED FIXED54996
[Qt] [WK2] When the context menu is empty, we should still send the signal QWKPage::showContextMenu()
https://bugs.webkit.org/show_bug.cgi?id=54996
Summary [Qt] [WK2] When the context menu is empty, we should still send the signal QW...
Benjamin Poulain
Reported 2011-02-22 13:54:44 PST
Currently, the signal QWKPage::showContextMenu() is sent only if the context menu is not empty. This can be a problem for users who want to extend the context menu because they get no notification in that case. The signal should be sent in any case, with an empty menu if necessary.
Attachments
Patch (2.64 KB, patch)
2011-02-22 14:19 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2011-02-22 14:19:17 PST
Andreas Kling
Comment 2 2011-02-22 14:22:55 PST
Comment on attachment 83387 [details] Patch Haia!
WebKit Commit Bot
Comment 3 2011-02-23 01:11:35 PST
Comment on attachment 83387 [details] Patch Clearing flags on attachment: 83387 Committed r79421: <http://trac.webkit.org/changeset/79421>
WebKit Commit Bot
Comment 4 2011-02-23 01:11:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.